--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="twitter:image" content="https://i.ibb.co/TDm2t6ps/profilphoto.jpg">
     <meta name="twitter:creator" content="@YourTwitterHandle" /> ]-->
     <meta name="theme-color" content="#3498db">
-    <link rel="icon" href="/profilphoto.jpg" type="image/jpeg">
-    <link rel="apple-touch-icon" href="/profilphoto.jpg">
+    <link rel="icon" href="/sa-profile.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="/sa-profile.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" as="style">
@@ -33,7 +33,7 @@
       "name": "Shree Akash",
       "alternateName": "Akash",
       "url": "https://shree-akash.github.io/",
-      "image": "https://i.ibb.co/TDm2t6ps/profilphoto.jpg",
+      "image": "/sa-profile.jpg",
       "birthDate": "2000-01-01",
       "description": "Shree Akash is a technology enthusiast and aspiring web developer passionate about building AI-driven and user-friendly digital solutions. He is constantly learning and exploring ways to merge creativity with technology.",
       "sameAs": [
@@ -61,7 +61,7 @@
     <main>
         <section id="hero" class="d-flex align-items-center justify-content-center" aria-labelledby="hero-title">
             <div class="container text-center">
-                <img src="/profilphoto.jpg" alt="Shree Akash Profile Photo" class="profile-photo" loading="lazy">
+                <img src="/sa-profile.jpg" alt="Shree Akash Profile Photo" class="profile-photo" loading="lazy">
                 <h1 id="hero-title">Shree Akash</h1>
                 <p class="lead">AI Enthusiast & Web Developer</p>
                 <p>Passionate about building AI-driven and user-friendly digital solutions.</p>
